Corrected letter spacing in header sub text

--- a/css/style.css
+++ b/css/style.css
@@ -53,5 +53,5 @@ body{
   display: block;
   font-size: 20px;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 15.8px;
 }
